<?xml version="1.0"?>
<package format="3">
  <name>f1tenth_gap_following</name>
  <version>0.0.1</version>
  <description>This node implements the gap following technique to drive the car.</description>

  <maintainer email="zijun.xu@stonybrook.edu">Zijun Xu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
